--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
                 "output": "./svg"
               }
             ],
-            "styles": ["src/global.scss", "src/theme/variables.scss"],
+            "styles": ["src/global.scss", "src/theme/variables.scss","node_modules/material-design-icons/iconfont/material-icons.css"],
             "scripts": []
           },
           "configurations": {
