--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@ionic/storage-angular": "^4.0.0",
     "ionicons": "^7.0.0",
     "material-design-icons": "^3.0.1",
+    "ngx-quill": "^26.0.8",
+    "quill": "^2.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
@@ -50,6 +52,7 @@
     "@capacitor/cli": "6.1.2",
     "@ionic/angular-toolkit": "^11.0.1",
     "@types/jasmine": "~5.1.0",
+    "@types/quill": "^2.0.14",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.57.0",
